fixing button primary size and box spacing when is a button element

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6,7 +6,7 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
- * Date: Wed Apr 11 15:18:46 BRT 2012
+ * Date: Wed Apr 11 15:55:46 BRT 2012
  */
 article,
 aside,
@@ -1357,7 +1357,8 @@ select:focus:required:invalid:focus {
 .box.secondary .box-footer .actions {
   padding: 10px 20px 20px 20px;
 }
-.box.secondary .box-footer .actions a {
+.box.secondary .box-footer .actions a,
+.box.secondary .box-footer .actions button {
   margin: 10px 20px 0 0;
 }
 table {
@@ -2890,9 +2891,9 @@ table .span12 {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   -webkit-transition: 0.1s linear all;
   -moz-transition: 0.1s linear all;
